@@ -1,0 +1,12 @@
+
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Icon=midori
+Type=X-XFCE-Helper
+_Name=Midori
+StartupNotify=true
+X-XFCE-Binaries=midori;
+X-XFCE-Category=WebBrowser
+X-XFCE-Commands=%B;
+X-XFCE-CommandsWithParameter=%B "%s";
