@@ -1,3 +1,9 @@
+2008-10-10	Jannis Pohlmann <jannis@xfce.org>
+
+	* exo-helper/helpers/Makefile.am, 
+	  exo-helper/helpers/midori.desktop.in.in: Add Midori helper. Patch 
+		provided by Christian Dywan. This closes bug #4446.
+
 2008-08-05	Brian Tarricone <bjt23@cornell.edu>
 
 	* exo/exo-utils.h: Move the exo_atomic_inc()/exo_atomic_dec() inline
